embedded media widget: logic to embed different tags by selected content type still missing actual html5 tags

--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -18,7 +18,7 @@
     <!-- return to markItUp & insert code -->
     <script type="text/javascript">
         var media_widget = parent.media_widget;
-        media_widget.fb_helper.triggerInsert('{{file_url}}');
+        media_widget.fb_helper.triggerInsert('{{file_url}}', '{{media_type}}');
         media_widget.mediaWidget("close");
     </script>
    {% endif %}
