embed widget: bind select with hidden field both ways

--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -13,6 +13,10 @@
             $("#selectMediaType").change(function(){
                 $("#id_media_type").val($(this).val());                
             });
+            //retrieve value from hidden field
+            if($("#id_media_type").val()){
+                $("#selectMediaType").val($("#id_media_type").val());
+            }
             // clean message alerts after 5s
             $(".message-row").delay(5000).fadeOut();
         });
