fixed missing hidden input in article's picture selection without this, the selected image got erased whenever article was saved also had to be updated from media widget, or previous image would remain

--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -1,3 +1,4 @@
+<input type="hidden" name="{{ name }}" value="{{ value }}" id="id_{{ name }}">
 <table class="mw_table">
     <tr>
         <td class="mw_button">
