--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -101,13 +101,13 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active">
+                    <li role="presentation">
                         <a href="#upload" aria-controls="upload" role="tab" data-toggle="tab">
                             <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
                             Subir
                         </a>
                     </li>
-                    <li role="presentation">
+                    <li role="presentation" class="active">
                         <a href="#search" aria-controls="search" role="tab" data-toggle="tab">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             Buscar en biblioteca
@@ -115,7 +115,7 @@
                     </li>
                 </ul>
                 <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="upload">
+                    <div role="tabpanel" class="tab-pane" id="upload">
                         <!-- Upload file to library before embedding it -->
                         <form method="POST" action="{% url embed-create %}" enctype="multipart/form-data">
                             {% csrf_token %}
@@ -169,25 +169,60 @@
                             </div>
                         </form>                    
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="search">
+                    <div role="tabpanel" class="tab-pane active" id="search">
                     <div id="select_media_widget">
-                        <table class="table table-striped table-condensed">
-                        {% for media in media_list %}
-                            <tr>
-                                <td>
-                                    <button class="select_media btn btn-primary btn-xs" value="{{media.media_file}}">Seleccionar</button>
-                                <td/>
-                                <td>{{ media.name }}</td>
-                                {% if  media.media_file_field == "image" or media.image_file_field == "image" and media.image != None %}
-                                    <td>
-                                        <a href="{{ media.image }}" target="_blank"><img src="{% version media.image.path 'fb_thumb' %}" title="{{picture.description}}" class="thumbnail"/></a>
-                                    </td>
-                                {% elif media.image_file_field == "image" and media.image == None %}
-                                    <td></td>
+                        <div class="row text-center">
+                            <div class="col-xs-3" style="margin-top: 8px;">
+                                {% if pagina.has_previous %}
+                                    <a href="?n={{ pagina.previous_page_number }}">
+                                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>&nbsp;Atr&aacute;s
+                                    </a>
                                 {% endif %}
-                            <tr/>
-                        {% endfor %}
-                        </table>
+                            </div>
+                            <div class="col-xs-6">
+                                <h4>
+                                    {%if pagina.has_previous %}
+                                        {% if n != '2' %}
+                                            <small><a href="?n=1">1</a>...</small>
+                                        {% endif %}
+                                        <a href="?n={{ pagina.previous_page_number }}">{{pagina.previous_page_number}}</a>&nbsp;
+                                    {%endif%}
+                                    <strong><u>{{n}}</u></strong>
+                                    {%if pagina.has_next%}
+                                        &nbsp;<a href="?n={{ pagina.next_page_number }}">{{pagina.next_page_number}}</a>
+                                        {% if n != pen_ultimo %}
+                                            <small>...<a href="?n={{ pagina.paginator.num_pages }}">{{ pagina.paginator.num_pages }}</a></small>
+                                        {% endif %}
+                                    {%endif%}
+                                </h4>
+                            </div>
+                            <div class="col-xs-3" style="margin-top: 8px;">
+                                {% if pagina.has_next %}
+                                    <a href="?n={{ pagina.next_page_number }}" >
+                                        Siguiente&nbsp;<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <table class="table table-striped table-condensed">
+                            {% for media in pagina.object_list %}
+                                <tr>
+                                    {% if  media.media_file_field == "image" or media.image_file_field == "image" and media.image != None %}
+                                        <td style="vertical-align: middle;">
+                                            <a href="{{ media.image }}" target="_blank"><img src="{% version media.image.path 'fb_thumb' %}" title="{{picture.description}}" class="thumbnail"/></a>
+                                        </td>
+                                    {% elif media.image_file_field == "image" and media.image == None %}
+                                        <td></td>
+                                    {% endif %}
+                                    <td style="vertical-align: middle;">{{ media.name }}</td>
+                                    <td style="vertical-align: middle;">
+                                        <button class="select_media btn btn-primary btn-xs" value="{{media.media_file}}">Seleccionar</button>
+                                    <td/>
+                                <tr/>
+                            {% endfor %}
+                            </table>
+                        </div>
                     </div>
                     </div>
                 </div>
