una forma de seguir con el media_type seleccionado por ajax al navegar por la paginacion sobrescribiendolo con un query param. la otra es rescribiendo la url completa con un filtro. esto debiera actualizar la jilada seleccionada de ajax

--- a/cyclope/apps/media_widget/templates/media_widget/media_iframe.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_iframe.html
@@ -1,3 +1,3 @@
 <div id="media_iframe">
-  <iframe src="/media_widget/embed/new" width="100%" height="100%" frameborder="0" style="min-height: 480px;"></iframe> 
+  <iframe src="/media_widget/embed/new/picture" width="100%" height="100%" frameborder="0" style="min-height: 480px;"></iframe> 
 </div>
