(tratando de seleccionar el media type desde la respuesta ajax) ca ne marrrrche pas...

--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -74,3 +74,9 @@ $("#nPerPage").change(function(){
     });
 });
 </script>
+
+<!--  -->
+<script type="text/javascript">
+$("#selectMediaType").val("{{media_type}}");
+</script>
+
