--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -1,9 +1,9 @@
-{% load fb_versions %}
+{% load fb_versions pagination_link %}
 
 <div class="row text-center">
     <div class="col-xs-3" style="margin-top: 8px;">
         {% if pagina.has_previous %}
-            <a href="?n={{ pagina.previous_page_number }}&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">
+            <a href="{% pagination_link media_type pagina.previous_page_number nRows %}" class="paginacion">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>&nbsp;Atr&aacute;s
             </a>
         {% endif %}
@@ -11,23 +11,17 @@
     <div class="col-xs-6">
         <h4>
             {%if pagina.has_previous %}
-                {% if n != '2' %}
-                    <small><a href="?n=1&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">1</a>...</small>
-                {% endif %}
-                <a href="?n={{pagina.previous_page_number}}&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">{{pagina.previous_page_number}}</a>&nbsp;
+                <small><a href="{% pagination_link media_type 1 nRows %}" class="paginacion">1</a>...</small>
             {%endif%}
             <strong><u>{{n}}</u></strong>
             {%if pagina.has_next%}
-                &nbsp;<a href="?n={{pagina.next_page_number}}&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">{{pagina.next_page_number}}</a>
-                {% if n != pen_ultimo %}
-                    <small>...<a href="?n={{pagina.paginator.num_pages}}&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">{{ pagina.paginator.num_pages }}</a></small>
-                {% endif %}
+                <small>...<a href="{% pagination_link media_type pagina.paginator.num_pages nRows %}" class="paginacion">{{ pagina.paginator.num_pages }}</a></small>
             {%endif%}
         </h4>
     </div>
     <div class="col-xs-3" style="margin-top: 8px;">
         {% if pagina.has_next %}
-            <a href="?n={{pagina.next_page_number}}&nRows={{nRows}}{%if media_type%}&media_type={{media_type}}{%endif%}" class="paginacion">
+            <a href="{% pagination_link media_type pagina.next_page_number nRows %}" class="paginacion">
                 Siguiente&nbsp;<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </a>
         {% endif %}
@@ -75,8 +69,10 @@ $("#nPerPage").change(function(){
 });
 </script>
 
-<!--  -->
+<!-- update media_type selected option on ajax calls -->
 <script type="text/javascript">
-$("#selectMediaType").val("{{media_type}}");
+$(function(){
+    $("#selectMediaType").val("{{media_type}}");
+});
 </script>
 
