--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -1,6 +1,6 @@
 {% load fb_versions %}
 
-{% include "media_widget/pagination_header.html" %}
+{% include "media_widget/pagination_header.html" with widget='embed' %}
 
 <div class="row">
     <table class="table table-striped table-condensed">
@@ -22,23 +22,9 @@
     </table>
 </div>
 
-{% include "media_widget/pagination_footer.html" %}
+{% include "media_widget/pagination_footer.html" with widget='embed' %}
 
 <!-- TODO bind scripts in links -->
-
-<!--Re-bind nRows input on Ajax-->
-<script type="text/javascript">
-$("#nPerPage").change(function(){
-    url = '/media_widget/library/'+$("#id_media_type").val()+'?n={{n}}&nRows='+$(this).val()
-    $.get(url, function(data){
-        $("#select_media_widget").html(data);
-        //re-bind
-        $(".select_media").click(function(){
-            insert_markitup($(this).val());
-        });
-    });
-});
-</script>
 
 <!-- update media_type selected option on ajax calls -->
 <script type="text/javascript">
