--- a/cyclope/apps/media_widget/templates/media_widget/pagination_header.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pagination_header.html
@@ -3,7 +3,7 @@
 <div class="row text-center">
     <div class="col-xs-3" style="margin-top: 8px;">
         {% if pagina.has_previous %}
-            <a href="{% pagination_link media_type pagina.previous_page_number nRows %}" class="paginacion">
+            <a href="{% pagination_link widget param pagina.previous_page_number nRows %}" class="paginacion">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>&nbsp;Atr&aacute;s
             </a>
         {% endif %}
@@ -11,17 +11,17 @@
     <div class="col-xs-6">
         <h4>
             {%if pagina.has_previous %}
-                <small><a href="{% pagination_link media_type 1 nRows %}" class="paginacion">1</a>...</small>
+                <small><a href="{% pagination_link widget param 1 nRows %}" class="paginacion">1</a>...</small>
             {%endif%}
             <strong><u>{{n}}</u></strong>
             {%if pagina.has_next%}
-                <small>...<a href="{% pagination_link media_type pagina.paginator.num_pages nRows %}" class="paginacion">{{ pagina.paginator.num_pages }}</a></small>
+                <small>...<a href="{% pagination_link widget param pagina.paginator.num_pages nRows %}" class="paginacion">{{ pagina.paginator.num_pages }}</a></small>
             {%endif%}
         </h4>
     </div>
     <div class="col-xs-3" style="margin-top: 8px;">
         {% if pagina.has_next %}
-            <a href="{% pagination_link media_type pagina.next_page_number nRows %}" class="paginacion">
+            <a href="{% pagination_link widget param pagina.next_page_number nRows %}" class="paginacion">
                 Siguiente&nbsp;<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </a>
         {% endif %}
