--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <hr/>
-        <!-- TODO ?
+        <!-- TODO
         <br />
         <div class="row">
             <div class="col-md-12">
